# brain_pdp

./: ..gitignore.un~  .README.md.swp  .gitignore  README.md
PDP/practical-one-solutions/practical-one-solutions/c/: blocking.c  non-blocking.c  overlap.c
PDP/practical-one-solutions/practical-one-solutions/f/: blocking.F90  makefile  non-blocking.F90  overlap.F90  subpractical.srun
parallel/: CMakeLists.txt
parallel/header/: t.h
parallel/src/: main.c
vs_brain_pdp/: vs_brain_pdp.sln
vs_brain_pdp/vs_brain_pdp/: code.c  small  vs_brain_pdp.vcxproj
vs_parallel/: vs_parallel.sln
vs_parallel/vs_parallel/: global.h  main.c  vs_parallel.vcxproj  vs_parallel.vcxproj.filters
vs_parallel2/: README.md  vs_parallel2.sln
vs_parallel2/vs_parallel2/: global.c  global.h  main.c  medium  test.c  vs_parallel2.vcxproj  vs_parallel2.vcxproj.filters
